syntax = "proto3";

package zorro;
option go_package = "github.com/Acedyn/zorro-proto/gen/protos/scheduling";

import "protos/processor/processor.proto";

// Parameters for processor registration
message ProcessorRegistration {
  Processor processor = 1;
  string host = 2;
}

service SubprocessScheduling {
  // For processors to start running their commands
  rpc RegisterProcessor(ProcessorRegistration) returns (Processor);
}
